# keeenv

./: .gitignore  .keeenv  .keeenv.example  AGENTS.md  CHANGELOG.md  README.md  keeenv.py  main.py  pyproject.toml
keeenv/: __init__.py  config.py  constants.py  core.py  exceptions.py  keepass.py  main.py  validation.py
plans/: case-sensitivity-fix.md
tests/: __init__.py  secrets.kdbx  test_cli.py  test_core.py  test_keepass_manager.py  test_validation.py
