[project]
name = "keeenv"
dynamic = ["version"]
description = "Set local environments variables from Keepass"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pykeepass>=4.1.1.post1",
]

[project.scripts]
keeenv = "keeenv.main:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "keeenv/__init__.py"
