[project]
name = "keeenv"
dynamic = ["version"]
description = "Set local environments variables from Keepass"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pykeepass>=4.1.1.post1",
]

[project.scripts]
keeenv = "keeenv.main:main"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "keeenv/__init__.py"

[tool.black]
target-version = ["py311"]
